--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "npm test",
-    "start": "node index.js --unhandled-rejections=strict"
+    "start": "node index.js --unhandled-rejections=strict",
+    "dev": "nodemon index.js --unhandled-rejections=strict"
   },
   "author": "",
   "license": "ISC",
@@ -13,5 +14,8 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mongoose": "^5.9.5"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.2"
   }
 }
