--- a/package.json
+++ b/package.json
@@ -16,6 +16,14 @@
     "mongoose": "^5.9.5"
   },
   "devDependencies": {
-    "nodemon": "^2.0.2"
+    "husky": "^4.2.3",
+    "nodemon": "^2.0.2",
+    "prettier": "^2.0.2",
+    "pretty-quick": "^2.0.1"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
   }
 }
